plugins {
    id 'org.springframework.boot' version '2.6.8'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'com.google.cloud.tools.jib' version '2.7.1'
    id 'java'
}

group = 'com.jinwon'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2021.0.3")
}

dependencies {
    implementation 'io.jsonwebtoken:jjwt:0.9.1'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
//    implementation 'org.springframework.cloud:spring-cloud-config-client'
//    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'

    implementation 'commons-codec:commons-codec'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'javax.validation:validation-api'

    implementation 'javax.xml.bind:jaxb-api'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'

    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.apache.commons:commons-io:1.3.2'

    implementation 'com.h2database:h2'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    runtimeOnly 'mysql:mysql-connector-java'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

jib {
    from {
        image = 'openjdk:11'
    }
    to {
        image = 'ljw0829/sso-auth-server'
        tags = ['0.1.0']
    }
    container {
        mainClass = 'com.jinwon.ssoauth.SsoAuthApplication'
        creationTime = 'USE_CURRENT_TIMESTAMP'
        environment = [USE_PROFILE: "local"]
        format = 'OCI'
        volumes = ['/tmp']
        entrypoint = ['java', '-Dspring.profiles.active=${USE_PROFILE}', '-cp', '/app/resources:/app/classes:/app/libs/*', 'com.jinwon.ssoauth.SsoAuthApplication']
    }
}